# Browser-agent

./: .env.example  .gitignore  README.md
Show_examples/: HHRU_task_logs.md  Yandex-Mail_task_logs.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: react_agent.py  run_disk_logger.py
backend/app/browser/: mcp_server.py
backend/app/llm/: openrouter.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
